<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.elasticsearch</groupId>
    <artifactId>elasticsearch-license</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <elasticsearch.version>1.4.0-SNAPSHOT</elasticsearch.version>
        <lucene.version>4.10.0</lucene.version>
    </properties>

    <dependencies>

        <!-- test deps -->
        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-test-framework</artifactId>
            <version>${lucene.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.elasticsearch</groupId>
            <artifactId>elasticsearch</artifactId>
            <version>${elasticsearch.version}</version>
            <scope>test</scope>
            <type>test-jar</type>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.carrotsearch.randomizedtesting</groupId>
            <artifactId>randomizedtesting-runner</artifactId>
            <version>2.1.2</version>
            <scope>test</scope>
        </dependency>

        <!-- actual deps -->
        <dependency>
            <groupId>net.nicholaswilliams.java.licensing</groupId>
            <artifactId>licensing-core</artifactId>
            <version>1.1.0</version>
        </dependency>

        <dependency>
            <groupId>net.nicholaswilliams.java.licensing</groupId>
            <artifactId>licensing-licensor-base</artifactId>
            <version>1.1.0</version>
        </dependency>

        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-mapper-asl</artifactId>
            <version>1.8.5</version>
        </dependency>

        <dependency>
            <groupId>org.elasticsearch</groupId>
            <artifactId>elasticsearch</artifactId>
            <version>${elasticsearch.version}</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>1.3.1</version>
                <executions>
                    <execution>
                        <id>enforce-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>[1.7,)</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                    <fork>true</fork>
                    <maxmem>512m</maxmem>
                    <!-- REMOVE WHEN UPGRADE:
                         see https://jira.codehaus.org/browse/MCOMPILER-209 it's a bug where
                         incremental compilation doesn't work unless it's set to false causeing
                         recompilation of the entire codebase each time without any changes. Should
                         be fixed in version > 3.1
                     -->
                    <useIncrementalCompilation>false</useIncrementalCompilation>
                    <compilerArgs>
                        <arg>-XDignore.symbol.file</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <!-- ============================================================= -->
            <!-- Optional. This plugin is using surefire plugin to run tests.  -->
            <!-- ============================================================= -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.16</version>
                <configuration>
                    <forkCount>1</forkCount>
                    <reuseForks>false</reuseForks>
                    <includes>
                        <include>**/*Tests.java</include>
                    </includes>
                </configuration>
            </plugin>
            <!-- ============================================================= -->
            <!-- This plugin assembles plugin .zip package.                     -->
            <!-- ============================================================= -->
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.3</version>
                <configuration>
                    <appendAssemblyId>false</appendAssemblyId>
                    <outputDirectory>${project.build.directory}/releases/</outputDirectory>
                    <descriptors>
                        <descriptor>${basedir}/src/main/assemblies/plugin.xml</descriptor>
                    </descriptors>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>attached</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>assemble-all</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.carrotsearch.randomizedtesting</groupId>
                <artifactId>junit4-maven-plugin</artifactId>
                <version>2.1.2</version>
                <executions>
                    <execution>
                        <id>tests</id>
                        <phase>test</phase>
                        <goals>
                            <goal>junit4</goal>
                        </goals>
                        <configuration>
                            <heartbeat>20</heartbeat>
                            <jvmOutputAction>pipe,warn</jvmOutputAction>
                            <leaveTemporary>true</leaveTemporary>
                            <listeners>
                                <report-ant-xml mavenExtensions="true"
                                                dir="${project.build.directory}/surefire-reports"/>
                                <report-text
                                        showThrowable="true"
                                        showStackTraces="true"
                                        showOutput="${tests.output}"
                                        showStatusOk="false"
                                        showStatusError="true"
                                        showStatusFailure="true"
                                        showStatusIgnored="true"
                                        showSuiteSummary="true"
                                        timestamps="false"/>
                                <report-execution-times historyLength="20" file="${basedir}/${execution.hint.file}"/>
                            </listeners>
                            <assertions>
                                <enable/>
                                <disable package="${tests.assertion.disabled}"/>
                                <!-- pass org.elasticsearch to run without assertions -->
                            </assertions>
                            <parallelism>${tests.jvms}</parallelism>
                            <balancers>
                                <execution-times>
                                    <fileset dir="${basedir}" includes="${execution.hint.file}"/>
                                </execution-times>
                            </balancers>
                            <includes>
                                <include>**/*Tests.class</include>
                                <include>**/*Test.class</include>
                            </includes>
                            <excludes>
                                <exclude>**/Abstract*.class</exclude>
                                <exclude>**/*StressTest.class</exclude>
                            </excludes>
                            <jvmArgs>
                                <param>-Xmx${tests.heap.size}</param>
                                <param>-Xms${tests.heap.size}</param>
                                <param>-Xss256k</param>
                                <param>-XX:MaxPermSize=128m</param>
                                <param>-XX:MaxDirectMemorySize=512m</param>
                                <param>-Des.logger.prefix=</param>
                                <param>-XX:+HeapDumpOnOutOfMemoryError</param>
                                <param>-XX:HeapDumpPath=${tests.heapdump.path}</param>
                            </jvmArgs>
                            <shuffleOnSlave>${tests.shuffle}</shuffleOnSlave>
                            <sysouts>${tests.verbose}</sysouts>
                            <seed>${tests.seed}</seed>
                            <haltOnFailure>${tests.failfast}</haltOnFailure>
                            <uniqueSuiteNames>false</uniqueSuiteNames>
                            <systemProperties>
                                <java.io.tmpdir>.</java.io.tmpdir>
                                <!-- we use '.' since this is different per JVM-->
                                <!-- RandomizedTesting library system properties -->
                                <tests.bwc>${tests.bwc}</tests.bwc>
                                <tests.bwc.path>${tests.bwc.path}</tests.bwc.path>
                                <tests.bwc.version>${tests.bwc.version}</tests.bwc.version>
                                <tests.jvm.argline>${tests.jvm.argline}</tests.jvm.argline>
                                <tests.processors>${tests.processors}</tests.processors>
                                <tests.appendseed>${tests.appendseed}</tests.appendseed>
                                <tests.iters>${tests.iters}</tests.iters>
                                <tests.maxfailures>${tests.maxfailures}</tests.maxfailures>
                                <tests.failfast>${tests.failfast}</tests.failfast>
                                <tests.class>${tests.class}</tests.class>
                                <tests.method>${tests.method}</tests.method>
                                <tests.nightly>${tests.nightly}</tests.nightly>
                                <tests.verbose>${tests.verbose}</tests.verbose>
                                <tests.badapples>${tests.badapples}</tests.badapples>
                                <tests.weekly>${tests.weekly}</tests.weekly>
                                <tests.slow>${tests.slow}</tests.slow>
                                <tests.awaitsfix>${tests.awaitsfix}</tests.awaitsfix>
                                <tests.slow>${tests.slow}</tests.slow>
                                <tests.timeoutSuite>${tests.timeoutSuite}</tests.timeoutSuite>
                                <tests.showSuccess>${tests.showSuccess}</tests.showSuccess>
                                <tests.integration>${tests.integration}</tests.integration>
                                <tests.client.ratio>${tests.client.ratio}</tests.client.ratio>
                                <tests.enable_mock_modules>${tests.enable_mock_modules}</tests.enable_mock_modules>
                                <tests.assertion.disabled>${tests.assertion.disabled}</tests.assertion.disabled>
                                <tests.rest>${tests.rest}</tests.rest>
                                <tests.rest.suite>${tests.rest.suite}</tests.rest.suite>
                                <tests.rest.blacklist>${tests.rest.blacklist}</tests.rest.blacklist>
                                <tests.rest.spec>${tests.rest.spec}</tests.rest.spec>
                                <tests.network>${tests.network}</tests.network>
                                <tests.cluster>${tests.cluster}</tests.cluster>
                                <tests.heap.size>${tests.heap.size}</tests.heap.size>
                                <tests.filter>${tests.filter}</tests.filter>
                                <tests.version>${project.version}</tests.version>
                                <es.node.local>${env.ES_TEST_LOCAL}</es.node.local>
                                <es.node.mode>${es.node.mode}</es.node.mode>
                                <es.logger.level>${es.logger.level}</es.logger.level>
                                <tests.security.manager>${tests.security.manager}</tests.security.manager>
                                <tests.compatibility>${tests.compatibility}</tests.compatibility>
                                <java.awt.headless>true</java.awt.headless>
                                <!-- everything below is for security manager / test.policy -->
                                <junit4.tempDir>${project.build.directory}</junit4.tempDir>
                                <java.security.policy>${basedir}/dev-tools/tests.policy</java.security.policy>
                            </systemProperties>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>